--- a/app/src/main/res/values/styles_congress.xml
+++ b/app/src/main/res/values/styles_congress.xml
@@ -67,6 +67,14 @@
         <item name="android:minHeight">?attr/actionBarSize</item>
     </style>
 
+    <style name="BottomNav">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:background">@color/tool_bar_background</item>
+        <item name="android:elevation" tools:targetApi="lollipop">@dimen/tool_bar_elevation</item>
+    </style>
+
+
     <style name="ProgressBar" parent="Base.Widget.AppCompat.ProgressBar.Horizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">16dp</item>
